--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 				background-color: #12547e;
 				color: rgba(255, 255, 255, 0.80);
 				font-weight: 500; 
-				margin: 9vw;
 				}
 			
 			h1 {
 				font-weight: 900; 
+				font-size: 5em;
 				}	
 			
 			h2 {
