--- a/index.html
+++ b/index.html
@@ -57,12 +57,15 @@
 	</head>
 	
 	<body>
-		<section class="intro">
+		<section class="intro row">
+		<div class="col-12">
 		<h1>Hello, I'm Steve Quilala</h1>
 		<p>Award-winning designer that can code. Creative and technical unicorn. MBA graduate. UBC alumni. Canucks fan. Apple sheep. Cyclist. StarCraft II diamond league Zerg. INTP. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
+		</div>
 		</section>
-		<section class="loves p-3 m-2">
+		<section class="loves row">
+			<div class="col-12">
 		<h2>What I love...</h2>
 		<ul>
 			<li>Making new things</li>
@@ -212,6 +215,7 @@
 			<li>Funko Pops</li>
 			<li>Open Core Legacy Patcher</li>
 		</ul>
+		</div>
 		</section>
 		<p><small><em>I live and work in Vancouver and Nanaimo on the traditional, ancestral, unceded territory of the Snuneymuxw (Coast Salish), xʷməθkʷəy̓əm (Musqueam), Sḵwx̱wú7mesh (Squamish), and səlilwətaɬ (Tsleil-Waututh) Nations.</em></small> </p>
 
