--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 	</head>
 	
 	<body>
+		<div class="container">
 		<section class="intro row">
 		<div class="col-12">
 		<h1>Hello, I'm Steve Quilala</h1>
@@ -215,7 +216,7 @@
 		</div>
 		</section>
 		<p><small><em>I live and work in Vancouver and Nanaimo on the traditional, ancestral, unceded territory of the Snuneymuxw (Coast Salish), xʷməθkʷəy̓əm (Musqueam), Sḵwx̱wú7mesh (Squamish), and səlilwətaɬ (Tsleil-Waututh) Nations.</em></small> </p>
-
+</div>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	</body>
 </html>
