--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				}
 			
 			h1 {
-				font-size: 5em;
+				font-size: 4em;
 				}	
 			
 			h2 {
@@ -63,7 +63,7 @@
 		</div>
 		</section>
 		<section class="loves row">
-			<div class="col-12">
+			<div class="col-12 p-3">
 		<h2>What I love...</h2>
 		<ul>
 			<li>Making new things</li>
