--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		</div>
 		</section>
 		<section class="loves row">
-			<div class="col-12 p-3">
+			<div class="col-12 p-3 m-2">
 		<h2>What I love...</h2>
 		<ul>
 			<li>Making new things</li>
