--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 		<p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
 		</div>
 		</section>
-		<section class="loves row">
-			<div class="col-12 p-4 m-3">
+		<section class="loves row p-3">
+			<div class="col-12 p-4">
 		<h2>What I love...</h2>
 		<ul>
 			<li>Making new things</li>
