--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 	
 	<body>
 		<div class="container">
-		<section class="intro row">
-		<div class="col-12">
+		<section class="intro row p-3">
+		<div class="col-12 p-4">
 		<h1>Hello, I'm Steve Quilala</h1>
 		<p>Award-winning designer that can code. Creative and technical unicorn. MBA graduate. UBC alumni. Canucks fan. Apple sheep. Cyclist. StarCraft II diamond league Zerg. INTP. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
