--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				}
 			
 			h1 {
-				font-size: 4em;
+				font-size: 3.5em;
 				}	
 			
 			h2 {
@@ -57,7 +57,7 @@
 		<div class="container">
 		<section class="intro row p-3">
 		<div class="col-12 p-4">
-		<h1>Hello, I'm Steve Quilala</h1>
+		<h1 class="pt-3">Hello, I'm Steve Quilala</h1>
 		<p>Award-winning designer that can code. Creative and technical unicorn. MBA graduate. UBC alumni. Canucks fan. Apple sheep. Cyclist. StarCraft II diamond league Zerg. INTP. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
 		</div>
