--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
 	
 	<body>
 		<div class="container">
-		<section class="intro row p-3">
-		<div class="col-12 p-4">
+		<section class="intro row">
+		<div class="col-12 p-3">
 		<h1 class="pt-3">Hello, I'm Steve Quilala</h1>
 		<p>Award-winning designer that can code. Creative and technical unicorn. MBA graduate. UBC alumni. Canucks fan. Apple sheep. Cyclist. StarCraft II diamond league Zerg. INTP. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
 		</div>
 		</section>
 		<section class="loves row m-3">
-			<div class="col-12 p-4">
+			<div class="col-12 p-3">
 		<h2>What I love...</h2>
 		<ul>
 			<li>Making new things</li>
