--- a/index.html
+++ b/index.html
@@ -31,11 +31,9 @@
 				line-height: 1.5;
 				margin-bottom:1.5em;
 				}
-
-			ul {
-			}
 				
 			li {
+				margin-bottom: .5em;
 				}
 
 			a {
