--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				font-family: 'IBM Plex Sans', sans-serif;
 				background-color: #12547e;
 				color: rgba(255, 255, 255, 0.80);
-				font-weight: 200; 
+				font-weight: 100; 
 				}
 			
 			h1 {
@@ -28,6 +28,7 @@
 				}
 		
 			p {
+				font-size: 1.5em;
 				line-height: 1.5;
 				margin-bottom:1.5em;
 				}
