--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 				margin-bottom: 1.25em;
 				}
 				
+				ul {
+					list-style-type: circle;
+				}
+				
 			li {
 				margin-bottom: .5em;
 				}
