--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		
 			body {
 				font-family: 'IBM Plex Sans', sans-serif;
-				background-color: #12547e;
+				background-color: #0f4c81;
 				color: rgba(255, 255, 255, 0.80);
 				font-weight: 100;
 				}
