--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+			<link href="https://fonts.cdnfonts.com/css/corporative-alt" rel="stylesheet">
 		<style>
 		
 			body {
-				font-family: 'IBM Plex Sans', sans-serif;
+				font-family: Corporative, 'IBM Plex Sans', sans-serif;
 				background-color: #0f4c81;
 				color: rgba(255, 255, 255, 0.80);
 				font-weight: 200;
