--- a/index.html
+++ b/index.html
@@ -15,19 +15,21 @@
 		<style>
 		
 			body {
-				font-family: 'Corporative', 'IBM Plex Sans', sans-serif;
+				font-family: 'Corporative Alt', 'IBM Plex Sans', sans-serif;
 				background-color: #0f4c81;
 				color: rgba(255, 255, 255, 0.80);
 				font-weight: 200;
 				}
 			
 			h1 {
-				font-size: 3.5em;
-				font-weight: 200;
+				font-family: 'Corporative', 'IBM Plex Sans', sans-serif;
+				font-size: 4em;
+				font-weight: 900;
 				}	
 			
 			h2 {
-				font-weight: 200;
+				font-family: 'Corporative', 'IBM Plex Sans', sans-serif;
+				font-weight: 900;
 				}
 		
 			p {
