--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				background-color: #0f4c81;
 				color: rgba(255, 255, 255, 0.80);
 				font-weight: 200;
+				font-size: 18px;
 				}
 			
 			h1 {
