--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			a {
 				text-decoration: none;
 				color: rgba(255, 255, 255);
-				border-bottom: 1px solid rgba(255, 255, 255, 0.4);
+				border-bottom: 2px dotted rgba(255, 255, 255, 0.4);
 				}				
 		
 			section.loves {
