--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				font-family: 'Corporative Alt', 'IBM Plex Sans', sans-serif;
 				background-color: #0f4c81;
 				color: rgba(255, 255, 255, 0.80);
-				font-weight: 600;
+				font-weight: 500;
 				font-size: 18px;
 				}
 			
@@ -64,14 +64,14 @@
 		<div class="container">
 		<section class="intro row m-3">
 		<div class="col-12">
-		<h1 class="pt-4 pb-2">Hello, I'm Steve Quilala</h1>
+		<h1 class="pt-5 pb-2">Hello, I'm Steve Quilala</h1>
 		<p>Award-winning designer that can code. Creative and technical unicorn. MBA graduate. UBC alumni. Canucks fan. Apple sheep. Cyclist. StarCraft II diamond league Zerg. INTP. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
 		</div>
 		</section>
 		<section class="loves row m-4">
 			<div class="col-12 p-4">
-		<h2>What I love...</h2>
+		<h2 class="pb-2">What I love...</h2>
 		<ul>
 			<li>Making new things</li>
 			<li>Learning new topics and industries</li>
