--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<meta name="ahrefs-site-verification" content="26b78cf2070f7d79c63f999b701d187cac241393f76199ebd9244647b8a9e64b">
 		<script src="https://kit.fontawesome.com/63d93b4b7d.js" crossorigin="anonymous"></script>
-		<title>Hi. I'm Steve.</title>
+		<title>Hi.</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
@@ -64,7 +64,7 @@
 		<div class="container">
 		<section class="intro row m-3">
 		<div class="col-12">
-		<h1 class="pt-5 pb-2">Hello, I'm Steve Quilala</h1>
+		<h1 class="pt-5 pb-2">Hello 👋 <br/>I'm Steve Quilala</h1>
 		<p>Award-winning designer that can code. Creative and technical unicorn. MBA graduate. UBC alumni. Canucks fan. Apple sheep. Cyclist. StarCraft II diamond league Zerg. INTP. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
 		</div>
