--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
 				font-family: 'Corporative Alt', 'IBM Plex Sans', sans-serif;
 				background-color: #0f4c81;
 				color: rgba(255, 255, 255, 0.80);
-				font-weight: 500;
+				font-weight: 600;
 				font-size: 18px;
 				}
 			
 			h1 {
-				font-family: 'Corporative', 'IBM Plex Sans', sans-serif;
+				font-family: 'Corporative Alt', 'IBM Plex Sans', sans-serif;
 				font-size: 4em;
 				font-weight: 900;
 				}	
 			
 			h2 {
-				font-family: 'Corporative', 'IBM Plex Sans', sans-serif;
+				font-family: 'Corporative Alt', 'IBM Plex Sans', sans-serif;
 				font-weight: 900;
 				}
 		
 			p {
-				font-size: 1.25em;
+				font-size: 1.2em;
 				line-height: 1.5;
 				margin-bottom: 1em;
 				}
