--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				font-family: 'Corporative Alt Sans', 'IBM Plex Sans', sans-serif;
 				background-color: #0f4c81;
 				color: rgba(255, 255, 255, 0.80);
-				font-weight: 600;
+				font-weight: 500;
 				font-size: 18px;
 				}
 			
@@ -64,7 +64,7 @@
 		<div class="container">
 		<section class="intro row m-3">
 		<div class="col-12">
-		<h1 class="pt-5 pb-2">Hello 👋 <br/>I'm Steve Quilala</h1>
+		<h1 class="mt-5 mb-3">Hello 👋 <br/>I'm Steve Quilala</h1>
 		<p>Award-winning designer that can code. Creative and technical unicorn. MBA graduate. UBC alumni. Canucks fan. Apple sheep. Cyclist. StarCraft II diamond league Zerg. INTP. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
 		</div>
