--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		
 			body {
 				font-family: 'Corporative Alt Sans', 'IBM Plex Sans', sans-serif;
-				background-color: #0f4c81;
+				background-color: steelblue;
 				color: rgba(255, 255, 255, 0.80);
 				font-weight: 500;
 				}
