--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<style>
 		
 			body {
-				font-family: 'Corporative Sans', 'IBM Plex Sans', sans-serif;
+				font-family: 'Corporative Alt Sans', 'IBM Plex Sans', sans-serif;
 				background-color: steelblue;
 				color: rgba(255, 255, 255, 0.8);
 				font-weight: 500;
