--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 		</section>
 		</div>
 		<footer>
-		<p class="text-center mb-5"><small><em>I live and work in Vancouver and Nanaimo on the traditional, ancestral, unceded territory of the Snuneymuxw (Coast Salish), xʷməθkʷəy̓əm (Musqueam), Sḵwx̱wú7mesh (Squamish), and səlilwətaɬ (Tsleil-Waututh) Nations.</em></small> </p>
+		<p class="text-center mb-5"><small><em>I live, work, and play in Vancouver and Nanaimo on the traditional, ancestral, unceded territory of the Snuneymuxw (Coast Salish), xʷməθkʷəy̓əm (Musqueam), Sḵwx̱wú7mesh (Squamish), and səlilwətaɬ (Tsleil-Waututh) Nations.</em></small> </p>
 		</footer>
 		
 
