--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 				}				
 		
 			section.loves {
-				border: 1px solid rgba(255, 255, 255, 0.4);
+				border: 1px solid rgba(255, 255, 255, 0.25);
+				border-radius: 3px;
 				}
 				
 		</style>	
