--- a/index.html
+++ b/index.html
@@ -224,10 +224,13 @@
 		</ul>
 		</div>
 		</section>
-		</div>
 		<footer>
-		<p class="text-center mb-5"><small><em>I live, work, and play in Vancouver and Nanaimo on the traditional, ancestral, unceded territory of the Snuneymuxw (Coast Salish), xʷməθkʷəy̓əm (Musqueam), Sḵwx̱wú7mesh (Squamish), and səlilwətaɬ (Tsleil-Waututh) Nations.</em></small> </p>
+			<p class="text-center mb-5"><small><em>I live, work, and play in Vancouver and Nanaimo on the traditional,
+						ancestral, unceded territory of the Snuneymuxw (Coast Salish), xʷməθkʷəy̓əm (Musqueam), Sḵwx̱wú7mesh
+						(Squamish), and səlilwətaɬ (Tsleil-Waututh) Nations.</em></small> </p>
 		</footer>
+		</div>
+		
 		
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
