--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
 						<li>Black skinny jeans</li>
 						<li>Good quality leather</li>
 						<li>Birkenstocks</li>
+						<li>Glasses</li>
 						<li>Lord of the Rings</li>
 						<li>Hardwood floors</li>
 						<li>Shopping on Amazon</li>
@@ -202,7 +203,7 @@
 						<li>Black Mirror</li>
 						<li>Chocolate covered almonds</li>
 						<li>Watching pro-level Terran vs Zerg replays on YouTube</li>
-						<li>Grilled squid at Richmond Night Market</li>
+						<li>Grilled squid</li>
 						<li>Grilled mackarel</li>
 						<li>Kare-Kare</li>
 						<li>Cervélo bikes</li>
@@ -222,7 +223,8 @@
 						<li>Tortang talong</li>
 						<li>Visiting museums</li>
 						<li>Funko Pops</li>
-						<li>Open Core Legacy Patcher</li>
+						<li>Open Core Legacy Patcher</li>						
+						<li>Honda Trail CT 125 </li>
 					</ul>
 				</div>
 			</section>
