--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
 						<li>Smart people who are also kind and caring</li>
 						<li>Great teamwork when everyone is in-sync and working together as one</li>
 						<li>Cats</li>
+						<li>Apple products</li>
+						<li>New York City</li>
 						<li>Appreciating the hard work, talent, skill, and dedication of other humans</li>
 						<li>Honesty</li>
 						<li>Transparency</li>
@@ -90,22 +92,19 @@
 						<li>Authentic, trustworthy, and courageous leadership</li>
 						<li>Doing work that's fun and rewarding</li>
 						<li>People who are passionate and dedicated to their craft</li>
-						<li>Good friends and family</li>
-						<li>Unselfish, virtuous, generous, good people</li>
+						<li>Unselfish, virtuous, generous, kind strangers</li>
 						<li>Well thought-out, creative branding</li>
-						<li>Complex people who are super misunderstood, but are actually really good inside</li>
-						<li>Apple products</li>
-						<li>New York City</li>
+						<li>Complex people who are very misunderstood, but are actually good inside</li>
+						<li>Education and teaching</li>
+						<li>Learning through in-person lectures</li>
+						<li>Learning about laws and legal precedents that shape society</li>
 						<li>YouTube</li>
 						<li>Sinigang</li>
 						<li>Sushi</li>
-						<li>Fried chicken and gravy</li>
+						<li>Kare-Kare</li>
 						<li>Uni sashimi</li>
-						<li>Pizza Hut pan pizzas</li>
-						<li>Education, teaching, and learning</li>
-						<li>Learning through in-person lectures</li>
+						<li>Church's chicken</li>
 						<li>Soft, medium length cardigans with pockets</li>
-						<li>Learning about laws and legal precedents</li>
 						<li>Playing ball hockey with friends</li>
 						<li>Pho</li>
 						<li>Vancouver</li>
@@ -126,12 +125,14 @@
 						<li>Barack Obama speeches</li>
 						<li>30 Rock</li>
 						<li>Community</li>
+						<li>Succession</li>
 						<li>Brooklyn 99</li>
-						<li>Mac minis</li>
+						<li>Every generation of Mac Mini</li>
 						<li>The 12-inch MacBook</li>
 						<li>The cylinder Mac Pro</li>
 						<li>The desk lamp iMac</li>
 						<li>Researching and investing in good companies</li>
+						<li>Wealthsimple</li>
 						<li>Dyson products</li>
 						<li>Podcasts</li>
 						<li>Oprah Supersoul Conversations</li>
@@ -202,10 +203,9 @@
 						<li>Mythic Quest</li>
 						<li>Black Mirror</li>
 						<li>Chocolate covered almonds</li>
-						<li>Watching pro-level Terran vs Zerg replays on YouTube</li>
+						<li>Watching pro-level Terran vs. Zerg replays on YouTube</li>
 						<li>Grilled squid</li>
 						<li>Grilled mackarel</li>
-						<li>Kare-Kare</li>
 						<li>Cervélo bikes</li>
 						<li>Mizuno irons</li>
 						<li>Car camping</li>
@@ -219,7 +219,7 @@
 						<li>Chinatown BBQ</li>
 						<li>Ask for Luigi</li>
 						<li>AirTags</li>
-						<li>Warhammer 40k lore</li>
+						<li>Warhammer 40K lore</li>
 						<li>Tortang talong</li>
 						<li>Visiting museums</li>
 						<li>Funko Pops</li>
