--- a/index.html
+++ b/index.html
@@ -28,11 +28,15 @@
   <body id="bg-picker" class="default-bg">
 
     <div class="customizer d-flex justify-content-end p-3 ">
-      <button onclick="darkMode()" class="dark-button" title="Click to toggle dark mode"> <i
-          class="fa fa-solid fa-circle-half-stroke"></i><span>Dark Mode</span></button>
+      <button onclick="seasonalMode()" class="seasonal-button" title="Click to toggle seasonal theme">
+        <i class="fa fa-solid"></i>
+        <span>Seasonal Theme</span>
+      </button>
       &nbsp;
-      <button onclick="seasonalMode()" class="seasonal-button" title="Click to toggle seasonal theme"><i
-          class="fa fa-solid"></i><span>Seasonal Theme</span></button>
+      <button onclick="darkMode()" class="dark-button" title="Click to toggle dark mode">
+        <i class="fa fa-solid fa-circle-half-stroke"></i>
+        <span>Dark Mode</span>
+      </button>
     </div>
 
     <div class="container">
