--- a/index.html
+++ b/index.html
@@ -27,16 +27,25 @@
 
   <body id="bg-picker" class="default-bg">
 
-    <div class="customizer d-flex justify-content-end p-3 ">
+    <div class="customizer d-flex justify-content-end p-4 ">
+      
+      <button onclick="darkMode()" class="dark-button" title="Click to toggle dark mode">
+        <i class="fa fa-solid fa-circle-half-stroke"></i>
+        <span>Dark Mode</span>
+      </button>
+      &nbsp;
+
       <button onclick="seasonalMode()" class="seasonal-button" title="Click to toggle seasonal theme">
         <i class="fa fa-solid"></i>
         <span>Seasonal Theme</span>
       </button>
       &nbsp;
-      <button onclick="darkMode()" class="dark-button" title="Click to toggle dark mode">
-        <i class="fa fa-solid fa-circle-half-stroke"></i>
-        <span>Dark Mode</span>
+
+      <button onclick="alert('OMG no please dont')" class="contact-button" title="Contact me">
+        <i class="fa fa-solid fa-envelope"></i>
+        <span>Contact me</span>
       </button>
+
     </div>
 
     <div class="container">
