--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
       <section class="intro row m-3">
         <div class="col-12 col-md-6 offset-md-3">
           <h1 class="mt-5 mb-4">Hello <span id="greeting-icon"><i class="fa fa-solid fa-hand fa-shake" style="--fa-animation-duration: 30s; opacity: 0.5; font-size: 88%;"></i></span><br />I'm Steve Quilala</h1>
-          <p>Designer that can code. Creative and technical unicorn. MBA graduate. UBC alumni. Canucks fan. Apple sheep. Cyclist. StarCraft II diamond league Zerg. INTP. Cat person.</p>
+          <p>Designer that can code. Creative and technical unicorn. MBA graduate. UBC alumni. Canucks fan. Apple sheep.  StarCraft II diamond league Zerg. INTP. Cat person.</p>
           <p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
         </div>
       </section>
       <section class="row m-4">
         <div class="col-12 col-md-6 offset-md-3 p-4 loves">
-          <h2 class="pb-2">Things I value in life...</h2>
+          <h2 class="pb-2">Here are <span id="favs">###</span> of my favourite things...</h2>
           <ul>
             <li>Learning about new topics and industries</li>
             <li>Purposeful, well-designed objects</li>
@@ -92,13 +92,16 @@
             <li>Pho</li>
             <li>Vancouver</li>
             <li>Victoria</li>
+            <li>Boracay</li>
             <li>Tofino</li>
+            <li>Walking around UBC</li>
             <li>Perfect sunny side up fried eggs</li>
             <li>Hot wings</li>
             <li>Muhammad Ali</li>
             <li>Steve Jobs</li>
             <li>Watching old speeches and keynotes by Steve Jobs</li>
             <li>CSS</li>
+            <li>JavaScript</li>
             <li>NewTown Bakery</li>
             <li>Gardening</li>
             <li>Beef brisket and wonton egg noodle soup</li>
@@ -116,6 +119,7 @@
             <li>The desk lamp iMac</li>
             <li>Researching and investing in good companies</li>
             <li>Wealthsimple</li>
+            <li>Wealthsimple Tax (formerly SimpleTax)</li>
             <li>Dyson products</li>
             <li>Podcasts</li>
             <li>Oprah Supersoul Conversations</li>
@@ -151,6 +155,7 @@
             <li>Okanagan weather</li>
             <li>Hard-working, gritty, grinder types of players in any sport</li>
             <li>WordPress</li>
+            <li>London Drugs</li>
             <li>Korean BBQ</li>
             <li>Steel road bikes</li>
             <li>Airports</li>
@@ -218,7 +223,10 @@
       </footer>
     </div>
 
-    <script src="assets/js/scripts.js"></script>
+    <script src="assets/js/conditionals.js"></script>
+    <script src="assets/js/functions.js"></script>
+    <script src="assets/js/loops.js"></script>
+    <script src="assets/js/arrays.js"></script>
 
   </body>
 
