--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <script src="assets/js/conditionals.js"></script>
     <script src="assets/js/functions.js"></script>
     <script src="assets/js/storage.js"></script>
-    <script src="assets/js/loops.js" defer></script>
+    <script src="assets/js/loops.js"></script>
 
   </body>
 
