--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <section class="intro row m-3">
         <div class="col-12 col-md-6 offset-md-3">
           <h1 class="mt-5 mb-4">Hello <span id="greeting-icon"><i class="fa fa-solid fa-hand fa-shake" style="--fa-animation-duration: 30s; opacity: 0.5; font-size: 88%;"></i></span><br />I'm Steve Quilala</h1>
-          <p>Designer that can code. Creative and technical unicorn. Canucks fan. Apple sheep. MBA graduate. UBC alumni.   StarCraft II diamond league Zerg. INTP. Cat person.</p>
+          <p>Designer that can code. Creative and technical unicorn. Canucks fan. Apple sheep. MBA graduate. UBC alumni. StarCraft 2 diamond league Zerg. INTP. Cat person.</p>
           <p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
         </div>
       </section>
@@ -74,7 +74,6 @@
     <script src="assets/js/arrays.js"></script>
     <script src="assets/js/conditionals.js"></script>
     <script src="assets/js/functions.js"></script>
-    <script src="assets/js/loops.js" defer></script>
 
   </body>
 
