--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       <section class="row m-4">
         <div class="col-12 col-md-6 offset-md-3 p-4 favs-box">
-          <h2 class="pb-2">These are <span id="favsTotal">a few</span> of my favourite things...</h2>
+          <h2 class="pb-2">These are <span id="favsTotal">some</span> of my favourite things...</h2>
           <ul id="favsList">
 
               <!-- Populated by JSON -->
