--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <script src="assets/js/arrays.js"></script>
     <script src="assets/js/conditionals.js"></script>
     <script src="assets/js/functions.js"></script>
-    <script src="assets/js/loops.js"></script>
+    <script src="assets/js/loops.js" defer></script>
 
   </body>
 
