--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
     
     <script src="assets/js/data.json" async></script>
-    <script src="assets/js/arrays.js"></script>
+    <script src="assets/js/arrays.js" async></script>
     <script src="assets/js/conditionals.js"></script>
     <script src="assets/js/functions.js"></script>
     <script src="assets/js/loops.js" defer></script>
