--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 
   <head>
     <title>Hi. I'm Steve Quilala.</title>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <meta name="ahrefs-site-verification" content="26b78cf2070f7d79c63f999b701d187cac241393f76199ebd9244647b8a9e64b">
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="sLZNOBywcRrY0FARzXGqFQ" defer="true"></script> 
     
     <script src="https://kit.fontawesome.com/63d93b4b7d.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
