--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="container">
 
       <section class="intro row m-3">
-        <div class="col-12 col-md-6 offset-md-3">
+        <div class="col-12 col-lg-6 offset-lg-3">
           <h1 class="mt-5 mb-4">Hello <span id="greeting-icon"><i class="fa fa-solid fa-hand fa-shake" style="--fa-animation-duration: 30s; opacity: 0.5; font-size: 88%;"></i></span><br />I'm Steve Quilala</h1>
           <p>Designer that can code. Creative and technical unicorn. Canucks fan. Apple sheep. MBA graduate. UBC alumni. StarCraft 2 diamond league Zerg. INTP. Cat person.</p>
           <p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
@@ -60,7 +60,7 @@
       </section>
 
       <section class="row m-4">
-        <div class="col-12 col-md-6 offset-md-3 p-4 favs-box">
+        <div class="col-12 col-lg-6 offset-lg-3 p-4 favs-box">
           <h2 class="pb-2">These are <span id="favsTotal">some</span> of my favourite things...</h2>
           <ul id="favsList">
 
@@ -70,7 +70,7 @@
         </div>
       </section>
 
-      <footer class="col-12 col-md-6 offset-md-3">
+      <footer class="col-12 col-lg-6 offset-lg-3">
         <p class="text-center mb-5"><small><em>I live, work, and play in Vancouver and Nanaimo on the traditional, ancestral, unceded territory of the Snuneymuxw (Coast Salish), xʷməθkʷəy̓əm (Musqueam), Sḵwx̱wú7mesh (Squamish), and səlilwətaɬ (Tsleil-Waututh) Nations.</em></small> </p>
       </footer>
     </div>
