--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <section class="intro row m-3">
         <div class="col-12 col-lg-6 offset-lg-3">
-          <h1 class="mt-5 mb-4">Hello <span id="greeting-icon"><i class="fa fa-solid fa-hand fa-shake" style="--fa-animation-duration: 30s; opacity: 0.5; font-size: 88%;"></i></span><br />I'm Steve Quilala</h1>
+          <h1 class="mt-5 mb-4">Hello <span id="greeting-icon"><i class="fa fa-solid fa-shake" style="--fa-animation-duration: 10s; opacity: 1; font-size: 100%;">👋</i></span><br />I'm Steve Quilala</h1>
           <p>Designer that can code. Creative and technical unicorn. Canucks fan. Apple sheep. MBA graduate. UBC alumni. StarCraft 2 diamond league Zerg. INTP. Cat person.</p>
           <p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
         </div>
@@ -61,7 +61,7 @@
 
       <section class="row m-4">
         <div class="col-12 col-lg-6 offset-lg-3 p-4 favs-box">
-          <h2 class="pb-2">These are <span id="favsTotal">some</span> of my favourite things...</h2>
+          <h2 class="pb-2">These are <span id="favsTotal">some</span> of my favourite things:</h2>
           <ul id="favsList">
 
               <!-- Populated by JSON -->
