--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         </div>
       </section>
 
-      <footer class="col-12 col-lg-6 offset-lg-3">
-        <p class="text-center mb-5"><small><em>I live, work, and play in Vancouver and Nanaimo on the traditional, ancestral, unceded territory of the Snuneymuxw (Coast Salish), xʷməθkʷəy̓əm (Musqueam), Sḵwx̱wú7mesh (Squamish), and səlilwətaɬ (Tsleil-Waututh) Nations.</em></small> </p>
+      <footer class="col-12 col-lg-6 offset-lg-3 text-center mb-5">
+        <small class=""><em>I live, work, and play in Vancouver and Nanaimo on the traditional, ancestral, unceded territory of the Snuneymuxw (Coast Salish), xʷməθkʷəy̓əm (Musqueam), Sḵwx̱wú7mesh (Squamish), and səlilwətaɬ (Tsleil-Waututh) Nations.</em></small>
       </footer>
     </div>
 
