fix console error

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
       </footer>
     </div>
 
-    <script src="assets/js/data.json" async></script>
-    <script src="assets/js/arrays.js"></script>    
-    <script src="assets/js/conditionals.js"></script>
-    <script src="assets/js/functions.js"></script>
-    <script src="assets/js/loops.js" defer></script>
+    <script type="application/json" src="assets/js/data.json" async></script>
+    <script type="text/javascript" src="assets/js/arrays.js"></script>    
+    <script type="text/javascript" src="assets/js/conditionals.js"></script>
+    <script type="text/javascript" src="assets/js/functions.js"></script>
+    <script type="text/javascript" src="assets/js/loops.js" defer></script>
 
   </body>
 
