--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
       <section class="row m-4">
         <div class="col-12 col-lg-6 offset-lg-3 p-4 favs-box">
-          <h2 class="pb-2">These are <span id="favsTotal">some</span> of my favourite things:</h2>
+          <h2 class="pb-2">Here are <span id="favsTotal"></span> things that I love...</h2>
           <ul id="favsList">
 
               <!-- Populated by JSON -->
@@ -77,10 +77,16 @@
     </div>
 
     <script type="application/json" src="assets/js/data.json" async></script>
-    <script type="text/javascript" src="assets/js/arrays.js"></script>    
+    <script type="text/javascript" src="assets/js/arrays.js"></script>
     <script type="text/javascript" src="assets/js/conditionals.js"></script>
     <script type="text/javascript" src="assets/js/functions.js"></script>
-    <script type="text/javascript" src="assets/js/loops.js" defer></script>
+    <script type="module" src="assets/js/loops.js" defer></script>
+
+<script>
+
+
+
+</script>
 
   </body>
 
