--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
       <section class="row m-4">
         <div class="col-12 col-lg-6 offset-lg-3 p-4 favs-box">
-          <h2 class="pb-2">Here are <span id="favsTotal"></span> things that I love...</h2>
+          <h2 class="pb-2">Here are <span id="favsTotal">a few</span> things I love...</h2>
           <ul id="favsList">
 
               <!-- Populated by JSON -->
