--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <section class="intro row m-3">
         <div class="col-12 col-lg-8 offset-lg-2">
           <h1 class="mt-5 mb-4">Hello <span id="greeting-icon"><i class="fa fa-hand fa-solid fa-shake" style="--fa-animation-duration: 10s; opacity: 0.5; font-size: 90%;"></i></span><br />I'm Steve Quilala</h1>
-          <p>Designer that can code. Creative and technical unicorn. Apple fanboy. MBA graduate. UBC alumni. Long-suffering Vancouver Canucks fan. StarCraft 2 diamond league Zerg. INTP. Cat person.</p>
+          <p>Designer that can code. Creative and technical unicorn. Apple fanboy. MBA graduate. UBC Geography alumni. StarCraft II diamond league Zerg. Long-suffering Vancouver Canucks fan. INTP. Cat person.</p>
           <p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
         </div>
       </section>
