--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       <section class="row m-4">
         <div class="col-12 col-lg-8 offset-lg-2 p-4 favs-box">
-          <h2 class="pb-2">Here are <span id="favsTotal">a few</span> things I love...</h2>
+          <h2 class="pb-2">Here's a list of <span id="favsTotal">some</span> things I love...</h2>
           <ul id="favsList">
 
               <!-- Populated by JSON -->
