--- a/index.html
+++ b/index.html
@@ -3,28 +3,33 @@
 <html lang="en">
 
   <head>
+
     <title>Hi. I'm Steve Quilala.</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <!-- Ahrefs analytics -->
     <meta name="ahrefs-site-verification" content="26b78cf2070f7d79c63f999b701d187cac241393f76199ebd9244647b8a9e64b">
     <script src="https://analytics.ahrefs.com/analytics.js" data-key="sLZNOBywcRrY0FARzXGqFQ" defer="true"></script> 
 
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/corporative-alt" rel="stylesheet">
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- Bootstrap 5.3.3 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
+    <!-- FontAwesome -->
     <link rel="stylesheet" href="assets/fontawesome/css/all.css" >    
+
+    <!-- Styles -->
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
-
-
 
   </head>
 
@@ -32,21 +37,16 @@
 
     <!-- CUSTOMIZER -->
     <div class="customizer d-flex justify-content-end p-4">
-      
       <button onclick="darkMode()" class="dark-button" title="Click to toggle dark mode">
         <i class="fa fa-solid fa-circle-half-stroke"></i>
         <span>Dark Mode</span>
       </button>
-
       &nbsp;
-
       <button onclick="seasonalMode()" class="seasonal-button" title="Click to toggle seasonal theme">
         <i class="fa fa-solid"></i>
         <span>Seasonal Theme</span>
       </button>
-
       &nbsp;
-
     </div>
 
     <div class="container">
@@ -63,9 +63,7 @@
         <div class="col-12 col-lg-8 offset-lg-2 p-4 favs-box">
           <h2 class="pb-2">Here's a list of <span id="favsTotal">some</span> things I love...</h2>
           <ul id="favsList">
-
               <!-- Populated by JSON -->
-
           </ul>
         </div>
       </section>
@@ -73,6 +71,7 @@
       <footer class="col-12 col-lg-8 offset-lg-2 text-center mb-5">
         <small class=""><em>I live, work, and play in Vancouver and Nanaimo on the traditional, ancestral, unceded territory of the Snuneymuxw (Coast Salish), xʷməθkʷəy̓əm (Musqueam), Sḵwx̱wú7mesh (Squamish), and səlilwətaɬ (Tsleil-Waututh) Nations.</em></small>
       </footer>
+
     </div>
 
     <script type="application/json" src="assets/js/data.json" async></script>
@@ -80,12 +79,6 @@
     <script type="text/javascript" src="assets/js/conditionals.js"></script>
     <script type="text/javascript" src="assets/js/functions.js"></script>
     <script type="module" src="assets/js/loops.js" defer></script>
-
-<script>
-
-
-
-</script>
 
   </body>
 
