--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="container">
 
       <section class="intro row m-3">
-        <div class="col-12 col-lg-8 offset-lg-2">
+        <div class="col-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2">
           <h1 class="mt-5 mb-4">Hello <span id="greeting-icon"><i class="fa fa-hand fa-solid fa-shake" style="--fa-animation-duration: 10s; opacity: 0.5; font-size: 90%;"></i></span><br />I'm Steve Quilala</h1>
           <p>Designer that can code. Creative and technical unicorn. Apple fanboy. MBA graduate. UBC Geography alumni. StarCraft II diamond league Zerg. Long-suffering Vancouver Canucks fan. INTP. Cat person.</p>
           <p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
@@ -60,15 +60,15 @@
       </section>
 
       <section class="row m-4">
-        <div class="col-12 col-lg-8 offset-lg-2 p-4 favs-box">
-          <h2 class="pb-2">Here's a list of <span id="favsTotal">some</span> things I love...</h2>
+        <div class="col-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 p-4 favs-box">
+          <h2 class="pb-2">Here are <span id="favsTotal">some</span> things that I love...</h2>
           <ul id="favsList">
               <!-- Populated by JSON -->
           </ul>
         </div>
       </section>
 
-      <footer class="col-12 col-lg-8 offset-lg-2 text-center mb-5">
+      <footer class="col-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 text-center mb-5">
         <small class=""><em>I live, work, and play in Vancouver and Nanaimo on the traditional, ancestral, unceded territory of the Snuneymuxw (Coast Salish), xʷməθkʷəy̓əm (Musqueam), Sḵwx̱wú7mesh (Squamish), and səlilwətaɬ (Tsleil-Waututh) Nations.</em></small>
       </footer>
 
