--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+    <meta name="theme-color" content="#000000"/>
+    
     <!-- Ahrefs analytics -->
     <meta name="ahrefs-site-verification" content="26b78cf2070f7d79c63f999b701d187cac241393f76199ebd9244647b8a9e64b">
     <script src="https://analytics.ahrefs.com/analytics.js" data-key="sLZNOBywcRrY0FARzXGqFQ" defer="true"></script> 
