--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     </div>
 
-    <script type="text/javascript" src="assets/js/arrays.js" async></script>
+    <script type="text/javascript" src="assets/js/arrays.js"></script>
     <script type="text/javascript" src="assets/js/conditionals.js"></script>
     <script type="text/javascript" src="assets/js/functions.js"></script>
     <script type="module" src="assets/js/loops.js" defer></script>
