--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
 
     <div class="container">
 
-      <section class="intro row m-3">
-        <div class="col-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2">
+      <section class="intro row m-2">
+        <div class="col-12 col-lg-8 mx-auto">
           <h1 class="mt-5 mb-4">Hello <span id="greeting-icon"><i class="fa fa-hand fa-solid fa-shake" style="--fa-animation-duration: 10s; opacity: 0.5; font-size: 90%;"></i></span><br />I'm Steve Quilala</h1>
           <p>Designer that can code. Creative and technical unicorn. Apple fanboy. MBA graduate. UBC Geography alumni. StarCraft II diamond league Zerg. Long-suffering Vancouver Canucks fan. INTP. Cat person.</p>
           <p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
         </div>
       </section>
 
-      <section class="row m-4">
-        <div class="col-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 p-4 favs-box">
+      <section class="row m-3">
+        <div class="col-12 col-lg-8 mx-auto px-4 py-3 favs-box">
           <h2 class="pb-2">These are <span id="favsTotal">some</span> of my favourite things...</h2>
           <ul id="favsList">
               <!-- Populated by JSON -->
@@ -69,7 +69,7 @@
         </div>
       </section>
 
-      <footer class="col-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 text-center mb-5">
+      <footer class="col-12 col-lg-8 mx-auto text-center mb-5">
         <small class=""><em>I live, work, and play in Vancouver and Nanaimo on the traditional, ancestral, unceded territory of the Snuneymuxw (Coast Salish), xʷməθkʷəy̓əm (Musqueam), Sḵwx̱wú7mesh (Squamish), and səlilwətaɬ (Tsleil-Waututh) Nations.</em></small>
       </footer>
 
