--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
   <body id="bg-picker" class="default-bg">
 
-    <!-- CUSTOMIZER -->
-    <div class="customizer d-flex justify-content-end p-4">
+    <!-- THEME BAR -->
+    <div class="theme-bar d-flex justify-content-end p-4">
       <button onclick="darkMode()" class="dark-button" title="Click to toggle dark mode">
         <i class="fa fa-solid fa-circle-half-stroke"></i>
         <span>Dark Mode</span>
