--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
       <section class="intro row m-2">
         <div class="col-12 col-lg-8 mx-auto">
           <h1 class="mt-5 mb-4">Hello <span id="greeting-icon"><i class="fa fa-hand fa-solid fa-shake" style="--fa-animation-duration: 10s; opacity: 0.5; font-size: 90%;"></i></span><br />I'm Steve Quilala</h1>
-          <p>Designer that can code. Creative and technical unicorn. Apple fanboy. MBA graduate. UBC Geography alumni. StarCraft II diamond league Zerg. Long-suffering Vancouver Canucks fan. INTP. Cat person.</p>
-          <p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
+          <div id="favsIntro">
+            <!-- Populated by JSON -->
+          </div>
         </div>
       </section>
 
@@ -76,6 +77,7 @@
     </div>
 
     <script type="text/javascript" src="assets/js/arrays.js"></script>
+    <script type="text/javascript" src="assets/js/arrays2.js"></script>
     <script type="text/javascript" src="assets/js/conditionals.js"></script>
     <script type="text/javascript" src="assets/js/functions.js"></script>
     <script type="module" src="assets/js/loops.js" defer></script>
