--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <body id="bg-picker" class="default-bg">
 
     <!-- THEME BAR -->
-    <div class="theme-bar d-flex justify-content-end p-4">
+    <div class="theme-bar d-flex justify-content-sm-end p-4">
       <button onclick="darkMode()" class="dark-button" title="Click to toggle dark mode">
         <i class="fa fa-solid fa-circle-half-stroke"></i>
         <span>Dark Mode</span>
