--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         </div>
       </section>
 
-      <footer class="col-12 col-lg-8 mx-auto text-center mb-5">
-        <small class=""><em>I live, work, and play in Vancouver and Nanaimo on the traditional, ancestral, unceded territory of the Snuneymuxw (Coast Salish), xʷməθkʷəy̓əm (Musqueam), Sḵwx̱wú7mesh (Squamish), and səlilwətaɬ (Tsleil-Waututh) Nations.</em></small>
+      <footer class="col-12 col-lg-8 mx-auto text-center mt-4 mb-5 pb-5">
+        <p><em>I live, work, and play in Vancouver and Nanaimo on the traditional, ancestral, unceded territory of the Snuneymuxw (Coast Salish), xʷməθkʷəy̓əm (Musqueam), Sḵwx̱wú7mesh (Squamish), and səlilwətaɬ (Tsleil-Waututh) Nations.</em></p>
       </footer>
 
     </div>
